--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h2>Welcome! <br><span>
                     To Our Site
                 </span></h2>
-                <p>Mrm Moulet El Moul</p>
+                <p>Nheb Nmout</p>
                 <div class="social-icon">
                     <a href="#"><i class='bx bxl-facebook'></i></a>
                     <a href="#"><i class='bx bxl-twitter'></i></a>
